[gd_scene load_steps=17 format=3 uid="uid://d3equlu2k18pa"]

[ext_resource type="Script" uid="uid://bkv0gni4voe8x" path="res://Player/AnimPlayer.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://bhtx6wywyq5hk" path="res://Sprites/cloud_attack.png" id="2_3q168"]
[ext_resource type="Texture2D" uid="uid://bgjn46ny5nkyc" path="res://Sprites/cloud.png" id="2_n20f4"]
[ext_resource type="AudioStream" uid="uid://d12aaump7v4xs" path="res://SFX/jump1.ogg" id="3_2n4i2"]
[ext_resource type="AudioStream" uid="uid://sp7oy8cjqbki" path="res://SFX/slash.mp3" id="6_n20f4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gsndo"]
atlas = ExtResource("2_n20f4")
region = Rect2(35, 119, 173, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1a1l"]
atlas = ExtResource("2_3q168")
region = Rect2(35, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qryd"]
atlas = ExtResource("2_3q168")
region = Rect2(208, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_p75ea"]
atlas = ExtResource("2_3q168")
region = Rect2(381, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ir0u"]
atlas = ExtResource("2_3q168")
region = Rect2(581, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujrku"]
atlas = ExtResource("2_3q168")
region = Rect2(754, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mpka"]
atlas = ExtResource("2_3q168")
region = Rect2(927, 606, 173, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q168"]
atlas = ExtResource("2_n20f4")
region = Rect2(4, 439, 164, 173)

[sub_resource type="AtlasTexture" id="AtlasTexture_n20f4"]
atlas = ExtResource("2_n20f4")
region = Rect2(168, 439, 164, 173)

[sub_resource type="SpriteFrames" id="SpriteFrames_efikj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsndo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1a1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qryd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ir0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujrku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mpka")
}],
"loop": true,
"name": &"left",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsndo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1a1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qryd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ir0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujrku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mpka")
}],
"loop": true,
"name": &"right",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q168")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n20f4")
}],
"loop": true,
"name": &"wind_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q168")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n20f4")
}],
"loop": true,
"name": &"wind_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhfnw"]
size = Vector2(24, 41)

[node name="AnimPlayer" type="CharacterBody2D"]
script = ExtResource("1_kpjcp")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -32)
scale = Vector2(0.748555, 0.766667)
sprite_frames = SubResource("SpriteFrames_efikj")
animation = &"right"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_xhfnw")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2n4i2")
volume_db = -6.0
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_n20f4")
volume_db = -3.032

[node name="EnemyRangeBar" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 21.0
offset_right = 41.0
offset_bottom = 62.0
scale = Vector2(5.32738, 0.655998)

[node name="EnemyRangeBarLeft" type="ColorRect" parent="."]
offset_left = -205.0
offset_top = 21.0
offset_right = -2.0
offset_bottom = 48.0
